fix: corrent z-index for header & footer

--- a/src/components/view/page/footer-view/footer-view.module.scss
+++ b/src/components/view/page/footer-view/footer-view.module.scss
@@ -2,4 +2,5 @@
 
 .footer-view {
   display: flex;
+  z-index: 1;
 }
